FOF 3.0.11
================================================================================
~ Changing the #__akeeba_common table schema

FOF 3.0.10
================================================================================
~ gh-594 Use the correct numeric field types in scaffolding
+ Blade: @token to get Joomla!'s form token
+ Blade: @editor to get Joomla!'s WYSIWYG editor
+ Dispatcher mixin: ViewAliases, creates aliases for view names
# [HIGH] Passing $section in Container::getInstance had practically no effect

FOF 3.0.9
================================================================================
+ Improved detection and removal of duplicate update sites
+ Reset the APC cache, if enabled, before installing/updating an extension using an InstallScript script class.
# [HIGH] Params won't work properly with Conservative caching
# [MEDIUM] Config helper and installscript would fail in rare cases

FOF 3.0.8
================================================================================
+ utf8mb4 support in schema installer under Joomla! 3.5+
+ gh-584 removeHeader method added in Form, allowing you to remove a header from an XML form.
# [HIGH] FOF30\Update\Joomla could not detect Joomla! updates due to changes in Joomla! XML update sources
# [HIGH] Assets tracking was broken due to wrong use of in_array instead of array_key_exists
# [HIGH] The access model state was always filled with the default access level, making it impossible to filter by viewing access level.

FOF 3.0.7
================================================================================
# [HIGH] The caching ID was always wrong since JCache::makeId() is never called any more in Joomla!.

FOF 3.0.6
================================================================================
+ gh-579 Title field, added slug_separator attribute

FOF 3.0.5
================================================================================
~ No change to 3.0.4. I'm trying to get Packagist to work.

FOF 3.0.4