@@ -127,8 +127,23 @@ class lib_fof30InstallerScript
 		$src = $grandpa->getPath('source');
 		$sqlSource = $src . '/fof/sql';
 
-		$dbInstaller = new FOF30\Database\Installer($db, $sqlSource);
-		$dbInstaller->updateSchema();
+		// If we have an uppercase db prefix we can expect the database update to fail because we cannot detect reliably
+		// the existence of database tables. See https://github.com/joomla/joomla-cms/issues/10928#issuecomment-228549658
+		$prefix = $db->getPrefix();
+		$canFail = preg_match('/[A-Z]/', $prefix);
+
+		try
+		{
+			$dbInstaller = new FOF30\Database\Installer($db, $sqlSource);
+			$dbInstaller->updateSchema();
+		}
+		catch (\Exception $e)
+		{
+			if (!$canFail)
+			{
+				throw $e;
+			}
+		}
 
         // Since we're adding common table, I have to nuke the installer cache, otherwise checks on their existence would fail
         $dbInstaller->nukeCache();
